[gd_scene load_steps=2 format=3 uid="uid://cpos7lg6meg4m"]

[ext_resource type="Script" path="res://settings.gd" id="1_m671a"]

[node name="Settings" type="Node"]
script = ExtResource("1_m671a")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1600.0
offset_bottom = 720.0
color = Color(0.266667, 0.266667, 0.266667, 1)

[node name="Title" type="Label" parent="."]
offset_left = 746.0
offset_top = 148.0
offset_right = 881.0
offset_bottom = 184.0
text = "Instillinger"

[node name="TextEdit" type="Label" parent="."]
offset_left = 761.0
offset_top = 267.0
offset_right = 848.0
offset_bottom = 303.0
text = "Musikk"

[node name="MusicSlider" type="HSlider" parent="."]
offset_left = 463.0
offset_top = 298.0
offset_right = 1139.0
offset_bottom = 388.0
max_value = 1.0
step = 0.001
value = 1.0

[node name="TextEdit2" type="Label" parent="."]
offset_left = 736.0
offset_top = 385.0
offset_right = 877.0
offset_bottom = 421.0
text = "Lydeffekter"

[node name="SfxSlider" type="HSlider" parent="."]
offset_left = 469.0
offset_top = 445.0
offset_right = 1134.0
offset_bottom = 515.0
max_value = 1.0
step = 0.001
value = 1.0

[node name="MenuButton" type="Button" parent="."]
offset_left = 434.0
offset_top = 520.0
offset_right = 734.0
offset_bottom = 620.0
text = "Tilbake til hovedmenyen"

[connection signal="value_changed" from="MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SfxSlider" to="." method="_on_sound_effect_slider_value_changed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
